--- a/index.html
+++ b/index.html
@@ -20,5 +20,65 @@
     </nav>
   </header>
 
-  <body></body>
+  <body>
+    <main>
+      <!-- her skal min forside/hero sektion være -->
+      <section class="hero">
+        <div>
+          <h1>PORTFOLIO</h1>
+        </div>
+      </section>
+
+      <!-- h2 overskrift -->
+      <section>
+        <h2>SE MINE SITES</h2>
+      </section>
+
+      <!-- her skal være link til mine sites -->
+      <section class="bokse">
+        <div class="boks">
+          <a href="https://emilierasmussen.dk/website/index.html"
+            >FØRSTE SITE</a
+          >
+        </div>
+
+        <div class="boks">
+          <a href=" https://emilierasmussen.dk/konaktepenails/index.html"
+            >EMNE SITE</a
+          >
+        </div>
+
+        <div class="boks">
+          <a href=" http://emilierasmussen.dk/emergency-main/instruction.html"
+            >EMERGENCY SITE</a
+          >
+        </div>
+
+        <div class="boks">
+          <a href="http://emilierasmussen.dk/virksomhedssite-main/index.html"
+            >VIRKSOMHEDSSITE</a
+          >
+        </div>
+      </section>
+
+      <!-- h2 -->
+      <section>
+        <h2>HVEM ER JEG?</h2>
+      </section>
+
+      <!-- hvem er jeg -->
+      <section class="grid_1-1">
+        <div>
+          <h3>teeekst</h3>
+          <h3>teeekst</h3>
+          <h3>bla bla</h3>
+          <a class="btn" href="ommig.html"><strong>Lidt om mig --></strong></a>
+        </div>
+        <div>
+          <p>billede her</p>
+          <img src="img/solbriller.webp" alt="billede" />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
