--- a/ommig.html
+++ b/ommig.html
@@ -20,5 +20,56 @@
     </nav>
   </header>
 
-  <body></body>
+  <body>
+    <main>
+      <!-- mit navn her -->
+      <section>
+        <h5>EMILIE RASMUSSEN</h5>
+      </section>
+
+      <!-- Hej og billede -->
+      <section class="grid_1-1">
+        <div>
+          <h3>HEJ</h3>
+          <p>her skal der stå noget tekst om mig</p>
+          <p>hvad, det ved jeg ikke lige endnu helt</p>
+        </div>
+        <div class="mig">
+          <img src="img/emr.webp" alt="billede" />
+        </div>
+      </section>
+
+      <section>
+        <h2>Kea ?? evt tekst her</h2>
+      </section>
+
+      <!-- erhverserfaring og 1 semester -->
+      <section class="kasser">
+        <div class="kasse">
+          <h3>Inden multimedie design?</h3>
+          <li>tekst</li>
+          <li>tekst</li>
+          <li>tekst</li>
+        </div>
+        <div class="kasse">
+          <h3>Hvad tager jeg med fra 1 semester?</h3>
+          <li>tekst</li>
+          <li>tekst</li>
+          <li>tekst</li>
+        </div>
+      </section>
+      <section>
+        <div class="btn3">
+          <a class="btn" href="projekter.html"
+            ><strong>Se mit forløb</strong></a
+          >
+        </div>
+      </section>
+
+      <section><h2>TEKST HER</h2></section>
+
+      <!-- Billede collage her??? -->
+      <section></section>
+    </main>
+  </body>
 </html>
