--- a/projekter.html
+++ b/projekter.html
@@ -21,6 +21,49 @@
   </header>
 
   <body>
-    <p></p>
+    <main>
+      <section><h2>1 SEMESTER</h2></section>
+      <section>
+        <h3>
+          Udforsk og følg med i min læring på <br />
+          mit første semester på MMD
+        </h3>
+      </section>
+
+      <!-- her skal mine temaer være -->
+      <section class="temaer">
+        <div class="tema">
+          <a href="tema 1">TEMA 1</a>
+        </div>
+        <div class="tema">
+          <a href="tema 1">TEMA 2</a>
+        </div>
+
+        <div class="tema">
+          <a href="tema 1">TEMA 3</a>
+        </div>
+        <div class="tema">
+          <a href="tema 1">TEMA 4</a>
+        </div>
+        <div class="tema">
+          <a href="tema 1">TEMA 5</a>
+        </div>
+        <div class="tema">
+          <a href="tema 1">TEMA 6</a>
+        </div>
+      </section>
+
+      <section><h2>Erfaring med</h2></section>
+      <!-- her skal mine program kasser være -->
+      <section>
+        
+
+
+          <a class="btn" href="projekter.html"
+            ><strong>Se mit forløb</strong></a
+          >
+        </div>
+      </section>
+    </main>
   </body>
 </html>
