--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
+    <link rel="shortcut icon" href="img/favi1.png" />
+    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Forside</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
@@ -11,7 +18,9 @@
   <header>
     <nav class="menubar">
       <!-- her skal mit logo være -->
-      <div class="logo">LOGO</div>
+      <div class="logo">
+        <img src="img/portfolio.png" alt="Logo" />
+      </div>
       <ul>
         <li><a href="index.html">FORSIDE</a></li>
         <li><a href="ommig.html">OM MIG</a></li>
@@ -36,49 +45,27 @@
 
       <!-- her skal være link til mine sites -->
       <section class="bokse">
-        <div class="boks">
-          <a href="https://emilierasmussen.dk/website/index.html"
-            >FØRSTE SITE</a
-          >
-        </div>
-
-        <div class="boks">
-          <a href=" https://emilierasmussen.dk/konaktepenails/index.html"
-            >EMNE SITE</a
-          >
-        </div>
-
-        <div class="boks">
-          <a href=" http://emilierasmussen.dk/emergency-main/instruction.html"
-            >EMERGENCY SITE</a
-          >
-        </div>
-
-        <div class="boks">
-          <a href="http://emilierasmussen.dk/virksomhedssite-main/index.html"
-            >VIRKSOMHEDSSITE</a
-          >
-        </div>
-      </section>
-
-      <!-- h2 -->
-      <section>
-        <h2>HVEM ER JEG?</h2>
-      </section>
-
-      <!-- hvem er jeg -->
-      <section class="grid_1-1">
-        <div>
-          <h3>teeekst</h3>
-          <h3>teeekst</h3>
-          <h3>bla bla</h3>
-          <a class="btn" href="ommig.html"><strong>Lidt om mig --></strong></a>
-        </div>
-        <div>
-          <p>billede her</p>
-          <img src="img/solbriller.webp" alt="billede" />
-        </div>
+        <a href="https://emilierasmussen.dk/website/index.html" class="boks"
+          >FØRSTE SITE</a
+        >
+        <a
+          href=" https://emilierasmussen.dk/konaktepenails/index.html"
+          class="boks"
+          >EMNE SITE</a
+        >
+        <a
+          href=" http://emilierasmussen.dk/emergency-main/instruction.html"
+          class="boks"
+          >EMERGENCY SITE</a
+        >
+        <a
+          href="http://emilierasmussen.dk/virksomhedssite-main/index.html"
+          class="boks"
+          >VIRKSOMHEDS SITE</a
+        >
+        <a class="btn" href="ommig.html"><strong>Hvem er jeg?</strong></a>
       </section>
     </main>
   </body>
+  <footer></footer>
 </html>
