--- a/ommig.html
+++ b/ommig.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
+    <link rel="shortcut icon" href="img/favi1.png" />
+    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <title>Om mig</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
@@ -11,7 +18,7 @@
   <header>
     <nav class="menubar">
       <!-- her skal mit logo være -->
-      <div class="logo">LOGO</div>
+      <div class="logo"><img src="img/portfolio.png" alt="Logo" /></div>
       <ul>
         <li><a href="index.html">FORSIDE</a></li>
         <li><a href="ommig.html">OM MIG</a></li>
@@ -47,7 +54,7 @@
       <section class="kasser">
         <div class="kasse">
           <h3>Inden multimedie design?</h3>
-          <li>tekst</li>
+          <li>Servicemedarbejder på mcdonalds</li>
           <li>tekst</li>
           <li>tekst</li>
         </div>
