ny ide, dropper layout

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
           class="boks"
           >VIRKSOMHEDS SITE</a
         >
-        <a class="btn" href="ommig.html"><strong>Hvem er jeg?</strong></a>
+      </section>
+      <section>
+        <div class="btn3">
+          <a class="btn" href="ommig.html"><strong>Hvem er jeg?</strong></a>
+        </div>
       </section>
     </main>
   </body>
