--- a/ommig.html
+++ b/ommig.html
@@ -35,11 +35,23 @@
       </section>
 
       <!-- Hej og billede -->
-      <section class="grid_1-1">
+      <section class="grid_2-1">
         <div>
-          <h3>HEJ</h3>
-          <p>her skal der stå noget tekst om mig</p>
-          <p>hvad, det ved jeg ikke lige endnu helt</p>
+          <h3>Heeeejjj</h3>
+          <p>
+            Jeg hedder Emilie, er 22 år og opvokset i Helsingør. <br />
+            <br />
+            Det meste af min barndom har jeg tilbragt i en håndboldhal, jeg har
+            altid været en teamplayer, der trives bedst i fællesskaber. <br />
+            <br />
+            Jeg nyder at være social, møde nye mennesker og udfordre mig selv.
+            <br />
+            <br />Kreativitet har altid fyldt meget hos mig, og jeg elsker at få
+            idéer og gøre dem til virkelighed. <br />
+            <br />Netop derfor valgte jeg at læse multimediedesign - her kan jeg
+            kombinere det kreative med nye udfordringer og udvikle mig hele
+            tiden.
+          </p>
         </div>
         <div class="mig">
           <img src="img/emr.webp" alt="billede" />
@@ -55,14 +67,20 @@
         <div class="kasse">
           <h3>Inden multimedie design?</h3>
           <li>Servicemedarbejder på mcdonalds</li>
-          <li>tekst</li>
-          <li>tekst</li>
+          <li>Håndboldtræner</li>
+          <li>Selvstændig negleteknikker siden 2019</li>
         </div>
         <div class="kasse">
           <h3>Hvad tager jeg med fra 1 semester?</h3>
-          <li>tekst</li>
-          <li>tekst</li>
-          <li>tekst</li>
+          <p>
+            På første semester af multimediedesign har jeg fået en bred
+            introduktion til design og digitale medier. <br />Jeg har lært
+            grundlæggende grafisk design, arbejdet med Adobe-programmer som
+            Photoshop og Illustrator, og fået indsigt i UX/UI-design. Derudover
+            har jeg stiftet bekendtskab med webudvikling - herunder HTML, CSS og
+            lidt JavaScript - samt arbejdet med idéudvikling, konceptudvikling
+            og samarbejde i projektforløb.
+          </p>
         </div>
       </section>
       <section>
