--- a/projekter.html
+++ b/projekter.html
@@ -40,10 +40,10 @@
       <!-- her skal mine temaer være -->
       <section class="temaer">
         <div class="tema">
-          <a href="tema 1">TEMA 1</a>
+          <a href="tema1.html">TEMA 1</a>
         </div>
         <div class="tema">
-          <a href="tema 1">TEMA 2</a>
+          <a href="tema2.html">TEMA 2</a>
         </div>
 
         <div class="tema">
