--- a/ommig.html
+++ b/ommig.html
@@ -15,19 +15,19 @@
     <link rel="stylesheet" href="layout.css" />
     <link rel="stylesheet" href="header.css" />
   </head>
-  <header>
-    <nav class="menubar">
-      <!-- her skal mit logo være -->
-      <div class="logo"><img src="img/portfolio.png" alt="Logo" /></div>
-      <ul>
-        <li><a href="index.html">FORSIDE</a></li>
-        <li><a href="ommig.html">OM MIG</a></li>
-        <li><a href="projekter.html">PROJEKTER</a></li>
-      </ul>
-    </nav>
-  </header>
 
   <body>
+    <!--jeg inkludere min header med JavaScript -->
+    <div id="header"></div>
+
+    <script>
+      fetch("header.html")
+        .then((response) => response.text())
+        .then((data) => {
+          document.getElementById("header").innerHTML = data;
+        });
+    </script>
+
     <main>
       <!-- mit navn her -->
       <section>
