--- a/index.html
+++ b/index.html
@@ -70,4 +70,12 @@
     </main>
   </body>
   <footer></footer>
+
+  <!-- burgermenu  -->
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-links");
+      menu.classList.toggle("active");
+    }
+  </script>
 </html>
