--- a/projekter.html
+++ b/projekter.html
@@ -12,8 +12,7 @@
 
     <title>Projekter</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="layout.css" />
-    <link rel="stylesheet" href="header.css" />
+ 
   </head>
 
 
@@ -47,16 +46,16 @@
         </div>
 
         <div class="tema">
-          <a href="tema 1">TEMA 3</a>
+          <a href="tema3.html">TEMA 3</a>
         </div>
         <div class="tema">
-          <a href="tema 1">TEMA 4</a>
+          <a href="tema4.html">TEMA 4</a>
         </div>
         <div class="tema">
-          <a href="tema 1">TEMA 5</a>
+          <a href="tema5.html">TEMA 5</a>
         </div>
         <div class="tema">
-          <a href="tema 1">TEMA 6</a>
+          <a href="tema6.html">TEMA 6</a>
         </div>
       </section>
 
@@ -73,4 +72,11 @@
       </section>
     </main>
   </body>
+  <!-- burgermenu  -->
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-links");
+      menu.classList.toggle("active");
+    }
+  </script>
 </html>
