--- a/ommig.html
+++ b/ommig.html
@@ -97,4 +97,11 @@
       <section></section>
     </main>
   </body>
+  <!-- burgermenu  -->
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById("nav-links");
+      menu.classList.toggle("active");
+    }
+  </script>
 </html>
