logo og favicon

--- a/index.html
+++ b/index.html
@@ -4,16 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
-    <link rel="shortcut icon" href="img/favi1.png" />
-    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
+    <link rel="shortcut icon" href="img/nyny.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
     <link rel="manifest" href="/site.webmanifest" />
+
+    <!-- får min footer ikoner til at virke -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <title>Forside</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="layout.css" />
     <link rel="stylesheet" href="header.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
 
   <body>
@@ -64,12 +71,52 @@
       </section>
       <section>
         <div class="btn3">
-          <a class="btn" href="ommig.html"><strong>Hvem er jeg?</strong></a>
+          <a class="btn" href="projekter.html"
+            ><strong>Se min proces-></strong></a
+          >
+        </div>
+      </section>
+
+      <section>
+        <h2>HVEM ER JEG?</h2>
+        <div class="hvemerjeg">
+          <div class="mellemrum">
+            <br />
+            <h3>Vidste du at jeg...</h3>
+            <strong><li>Er født i Tyskland</li></strong>
+            <br />
+            <strong><li>Har spillet håndbold i 15 år</li></strong>
+            <br />
+            <strong><li>Har beøsgt 29 forskellige lande</li></strong>
+            <br />
+            <strong><li>Foretrækker dessert frem for hovedret</li></strong>
+            <br />
+            <a class="btn" href="ommig.html"
+              ><strong>Lær mig at kende-></strong></a
+            >
+          </div>
+
+          <div><img src="img/pc.JPG" alt="Emilie" /></div>
         </div>
       </section>
     </main>
   </body>
-  <footer></footer>
+
+  <footer>
+    <p>
+      <a
+        href="https://www.facebook.com/profile.php?id=100009255955648"
+        target="_blank"
+      >
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </p>
+
+    <p>Copyright © 2025 Emilie Rasmussen</p>
+  </footer>
 
   <!-- burgermenu  -->
   <script>
