--- a/projekter.html
+++ b/projekter.html
@@ -3,21 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
-    <link rel="shortcut icon" href="img/favi1.png" />
-    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
+    <link rel="shortcut icon" href="img/nyny.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- får min footer ikoner til at virke -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
     <title>Projekter</title>
     <link rel="stylesheet" href="style.css" />
- 
+    <link rel="stylesheet" href="footer.css" />
   </head>
 
-
   <body>
-      <!--jeg inkludere min header med JavaScript -->
+    <!--jeg inkludere min header med JavaScript -->
     <div id="header"></div>
 
     <script>
@@ -34,6 +38,7 @@
           Udforsk og følg med i min læring på <br />
           mit første semester på MMD
         </h3>
+        <br />
       </section>
 
       <!-- her skal mine temaer være -->
@@ -57,21 +62,26 @@
         <div class="tema">
           <a href="tema6.html">TEMA 6</a>
         </div>
-      </section>
-
-      <section><h2>Erfaring med</h2></section>
-      <!-- her skal mine program kasser være -->
-      <section>
-        
-
-
-          <a class="btn" href="projekter.html"
-            ><strong>Se mit forløb</strong></a
-          >
-        </div>
+        <br />
       </section>
     </main>
   </body>
+  <footer>
+    <p>
+      <a
+        href="https://www.facebook.com/profile.php?id=100009255955648"
+        target="_blank"
+      >
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </p>
+
+    <p>Copyright © 2025 Emilie Rasmussen</p>
+  </footer>
+
   <!-- burgermenu  -->
   <script>
     function toggleMenu() {
