--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="menubar">
         <div class="logo">
-          <img src="img/portfolio.png" alt="Logo" />
+          <img src="img/mitlogo.svg" alt="Logo" />
         </div>
         <!-- jeg laver min burger klik -->
         <button class="burger" onclick="toggleMenu()">=</button>
