--- a/tema1.html
+++ b/tema1.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
-    <link rel="shortcut icon" href="img/favi1.png" />
-    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
+    <link rel="shortcut icon" href="img/nyny.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- får min footer ikoner til at virke -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <title>Tema 1</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
   <!--jeg inkludere min header med JavaScript -->
   <div id="header"></div>
@@ -45,7 +51,6 @@
             Jeg fik styr på strukturering af digitale projekter og grundlæggende
             publicering af websites.
           </p>
-          <p></p>
         </article>
 
         <!-- mine link til mine projekter på de forskellige temaer -->
@@ -63,8 +68,32 @@
           >
         </div>
       </section>
+      <section>
+        <h2>TEKST HER</h2>
+        <div class="billederække">
+          <img src="img/pink.JPG" alt="billede 1" />
+          <img src="img/pink.JPG" alt="billede 2" />
+          <img src="img/pink.JPG" alt="billede 3" />
+          <img src="img/pink.JPG" alt="billede 4" />
+        </div>
+      </section>
     </main>
   </body>
+  <footer>
+    <p>
+      <a
+        href="https://www.facebook.com/profile.php?id=100009255955648"
+        target="_blank"
+      >
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </p>
+
+    <p>Copyright © 2025 Emilie Rasmussen</p>
+  </footer>
 
   <!-- burgermenu  -->
   <script>
