--- a/tema2.html
+++ b/tema2.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- favicon -->
-    <link rel="icon" type="image/png" href="img/favi1.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="img/favi1.png" />
-    <link rel="shortcut icon" href="img/favi1.png" />
-    <link rel="apple-touch-icon" sizes="" href="img/favi1.png" />
+    <link rel="icon" type="image/png" href="img/nyny.svg" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/nyny.svg" />
+    <link rel="shortcut icon" href="img/nyny.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/nyny.svg" />
     <link rel="manifest" href="/site.webmanifest" />
+    <!-- får min footer ikoner til at virke -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
     <title>Tema 2</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="footer.css" />
   </head>
   <body>
     <!--jeg inkludere min header med JavaScript -->
@@ -49,18 +55,34 @@
             semantisk HTML.
           </p>
           <p>Jeg lærte at bruge Git og validerede mit kode.</p>
-          <h4>Projekter</h4>
-        </article>
 
-        <!-- mine link til mine projekter på de forskellige temaer -->
-        <div class="btn3">
-          <a class="btn" href="https://emilierasmussen.dk/website/index.html"
-            >Mobil site-></a
-          >
-        </div>
+          <!-- mine link til mine projekter på de forskellige temaer -->
+          <div class="btn3">
+            <a class="btn" href="https://emilierasmussen.dk/website/index.html"
+              >Mobil site-></a
+            >
+          </div>
+          <br />
+        </article>
       </section>
     </main>
   </body>
+  <footer>
+    <p>
+      <a
+        href="https://www.facebook.com/profile.php?id=100009255955648"
+        target="_blank"
+      >
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://www.instagram.com/emiliemrasmussen/" target="_blank">
+        <i class="fab fa-instagram"></i>
+      </a>
+    </p>
+
+    <p>Copyright © 2025 Emilie Rasmussen</p>
+  </footer>
+
   <!-- burgermenu  -->
   <script>
     function toggleMenu() {
