tilføjer lidt animation

--- a/header.html
+++ b/header.html
@@ -10,8 +10,10 @@
   <body>
     <header>
       <nav class="menubar">
-        <div class="logo">
-          <img src="img/mitlogo.svg" alt="Logo" />
+        <div class="slideIn">
+          <div class="logo">
+            <img src="img/mitlogo.svg" alt="Logo" />
+          </div>
         </div>
         <!-- jeg laver min burger klik -->
         <button class="burger" onclick="toggleMenu()">=</button>
