--- a/tema1.html
+++ b/tema1.html
@@ -33,11 +33,8 @@
     <main>
       <section>
         <h2>INTROUGE</h2>
-        <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
-
-        <button onclick="history.back()">Go Back</button>
-
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
+        <!-- <button onclick="history.back()">Go Back</button> -->
         <article class="article">
           <!-- min tema beskrivelse -->
           <h3>Figma og Imovie</h3>
@@ -56,7 +53,7 @@
         <!-- mine link til mine projekter på de forskellige temaer -->
         <div class="btn3">
           <a class="btn" href="https://www.youtube.com/watch?v=3ysjAO1DG5o"
-            >Imovie video-></a
+            >Imovie video &rarr;</a
           >
         </div>
 
@@ -64,18 +61,10 @@
           <a
             class="btn"
             href=" https://www.figma.com/board/C5KrlQsKA7wHL02UXjBhHK/Pr%C3%A6sentationskort?node-id=0-1&t=7DRtIyx3wrkL1vkn-1"
-            >Præsentationskort-></a
+            >Præsentationskort &rarr;</a
           >
         </div>
-      </section>
-      <section>
-        <h2>TEKST HER</h2>
-        <div class="billederække">
-          <img src="img/pink.JPG" alt="billede 1" />
-          <img src="img/pink.JPG" alt="billede 2" />
-          <img src="img/pink.JPG" alt="billede 3" />
-          <img src="img/pink.JPG" alt="billede 4" />
-        </div>
+        <br />
       </section>
     </main>
   </body>
