--- a/tema2.html
+++ b/tema2.html
@@ -34,9 +34,10 @@
       <section>
         <h2>GRUNDLÆGGENDE WEB</h2>
         <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
+       <a class="goback" href="projekter.html"><p>&larr;</p></a>
+        <!-- <button onclick="history.back()">Go Back</button> -->
+        <article class="article">
 
-        <button onclick="history.back()">Go Back</button>
 
         <article class="article">
           <!-- min tema beskrivelse -->
@@ -59,7 +60,7 @@
           <!-- mine link til mine projekter på de forskellige temaer -->
           <div class="btn3">
             <a class="btn" href="https://emilierasmussen.dk/website/index.html"
-              >Mobil site-></a
+              >Mobil site &rarr;</a
             >
           </div>
           <br />
