--- a/tema3.html
+++ b/tema3.html
@@ -34,9 +34,8 @@
       <section>
         <h2>GRUNDLÆGGENDE UX/UI</h2>
         <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
-
-        <button onclick="history.back()">Go Back</button>
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
+        <article class="article">
 
         <article class="article">
           <!-- min tema beskrivelse -->
@@ -65,7 +64,7 @@
           <a
             class="btn"
             href="https://emilierasmussen.dk/konaktepenails/index.html"
-            >Emne site-></a
+            >Emne site &rarr;</a
           >
         </div>
 
@@ -73,7 +72,7 @@
           <a
             class="btn"
             href="https://www.figma.com/design/tguNAMpLSInren1ddnHc5P/EMNESITE---Konaktepenails?node-id=0-1&t=Y1KOuebSVo7Ha9xI-1"
-            >Se min proces-></a
+            >Se min proces &rarr;</a
           >
         </div>
         <br />
