--- a/index.html
+++ b/index.html
@@ -71,28 +71,27 @@
       </section>
       <section>
         <div class="btn3">
-          <a class="btn" href="projekter.html"
-            ><strong>Se min proces-></strong></a
+          <a class="btn1" href="projekter.html"
+            ><strong>Se min proces &rarr;</strong></a
           >
         </div>
+        <br />
       </section>
 
       <section>
-        <h2>HVEM ER JEG?</h2>
         <div class="hvemerjeg">
           <div class="mellemrum">
             <br />
-            <h3>Vidste du at jeg...</h3>
-            <strong><li>Er født i Tyskland</li></strong>
+            <h2>En personlig tilgang</h2>
+            <strong><li>Iderig</li></strong>
             <br />
-            <strong><li>Har spillet håndbold i 15 år</li></strong>
+            <strong><li>Kreativ</li></strong>
             <br />
-            <strong><li>Har beøsgt 29 forskellige lande</li></strong>
+            <strong><li>Eventyrlysten</li></strong>
             <br />
-            <strong><li>Foretrækker dessert frem for hovedret</li></strong>
             <br />
-            <a class="btn" href="ommig.html"
-              ><strong>Lær mig at kende-></strong></a
+            <a class="btn2" href="ommig.html"
+              ><strong>Lær mig at kende &rarr;</strong></a
             >
           </div>
 
