--- a/ommig.html
+++ b/ommig.html
@@ -60,8 +60,10 @@
             tiden.
           </p>
         </div>
+        <div class="fadeIn">
         <div class="mig">
-          <img src="img/pc.JPG" alt="billede" />
+          <img src="img/seejpink.jpg" alt="billede" />
+        </div>
         </div>
       </section>
 
@@ -70,39 +72,45 @@
         <details>
           <summary>Udannelse</summary>
 
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
+          <p>2025 - 2027 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
+          <p>2023 - 2024 | Ennegrammets grunduddannelse | Enneagramstedet Roskilde</p>
+          <p>2020 - 2022 | HF m. Mat/Erhversøkonomi som hovedfag | Espegærde gymnasium</p>
+          <p>2017 - 2018 | Gel nail polish full course | The Gel Bottle</p></p>
         </details>
 
         <details>
           <summary>Arbejde</summary>
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
+          <p>2018 - 2025 | Selvstændig negleteknikker | Konaktepenails Helsingør</p>
+          <p>2023 - 2024 | Pædagogmedhjælper | Nygaard special skole Helsingør</p>
+          <p>2021 - 2022 | Service medarbejder | Mcdonalds Helsingør</p>
         </details>
 
         <details>
           <summary>Kompetencer</summary>
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
-          <p>2020 - 2022 | Multimediedesign | KEA Københavns Erhvervsakademi</p>
+          <p>Første semester på KEA har givet mig kompetencer i: </p>
+          <p>-Adobe pakken | Creative cloud | Figma</p>
+          <p>-HTML, CSS, Github & JavaScript</p>
+          <p>-Idegenerering & designprincipper</p>
+          <p>-Fotografi & billederedigering</p>
+          <p>-Infografik & skitseringsteknikker</p>
+          <p>-Redesign af hjemmeside</p>
         </details>
       </section>
 
       <section>
         <div class="btn3">
           <a class="btn" href="projekter.html"
-            ><strong>Se mit forløb</strong></a
+            ><strong>Se mit forløb &rarr;</strong></a
           >
         </div>
+        <br>
       </section>
-
       <section>
-        <h2>TEKST HER</h2>
-
         <div class="billederække">
-          <img src="img/pink.JPG" alt="billede 1" />
-          <img src="img/pink.JPG" alt="billede 2" />
-          <img src="img/pink.JPG" alt="billede 3" />
-          <img src="img/pink.JPG" alt="billede 4" />
+          <img src="img/solnedgang.png" alt="billede 1" />
+          <img src="img/mange.jpg" alt="billede 2" />
+          <img src="img/bali.jpg" alt="billede 3" />
+          <img src="img/blomst.png" alt="billede 4" />
         </div>
       </section>
 
