--- a/tema4.html
+++ b/tema4.html
@@ -34,9 +34,7 @@
       <section>
         <h2>GRUNDLÆGGENDE ANIMATION</h2>
         <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
-
-        <button onclick="history.back()">Go Back</button>
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
 
         <article class="article">
           <!-- min tema beskrivelse -->
@@ -59,7 +57,7 @@
           <a
             class="btn"
             href="http://emilierasmussen.dk/emergency-main/instruction.html"
-            >Emergency site-></a
+            >Emergency site &rarr;</a
           >
         </div>
 
@@ -67,7 +65,7 @@
           <a
             class="btn"
             href="https://www.figma.com/design/jIAjpdMsT01CxDp3sQWUec/D%C3%B8delige-parasitter-florerer-i-hundeg%C3%A5rde?node-id=0-1&t=MZ5erZMPIS1N4HuY-1"
-            >Se min proces-></a
+            >Se min proces &rarr;</a
           >
         </div>
         <br />
