--- a/tema5.html
+++ b/tema5.html
@@ -34,9 +34,7 @@
       <section>
         <h2>GRUNDLÆGGENDE INDHOLD</h2>
         <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
-
-        <button onclick="history.back()">Go Back</button>
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
 
         <article class="article">
           <!-- min tema beskrivelse -->
@@ -65,7 +63,7 @@
           <a
             class="btn"
             href=" http://emilierasmussen.dk/virksomhedssite-main/index.html"
-            >Virksomhedssite</a
+            >Virksomhedssite &rarr;</a
           >
         </div>
 
@@ -73,7 +71,7 @@
           <a
             class="btn"
             href="https://www.figma.com/design/XLBPrhYr3Kd50GRenQf4EK/Tema5---Virksomhedssite?node-id=0-1&t=o2CkCEIUlO4clh3F-1"
-            >Se vores proces</a
+            >Se vores proces &rarr;</a
           >
         </div>
         <br />
