--- a/tema6.html
+++ b/tema6.html
@@ -35,9 +35,7 @@
       <section>
         <h2>Portfolio</h2>
         <!-- min knap tilbage -->
-        <a href="/projekter.html">GO BACK</a>
-
-        <button onclick="history.back()">Go Back</button>
+        <a class="goback" href="projekter.html"><p>&larr;</p></a>
 
         <article class="article">
           <!-- min tema beskrivelse -->
@@ -60,7 +58,7 @@
           <a
             class="btn"
             href="https://www.figma.com/design/1prJiVwxab9k3vHhdlvV4N/EKSAMEN-1-SEMESTER?node-id=0-1&t=8EnTm62GgWaYkX9v-1"
-            >Se min proces</a
+            >Se min proces &rarr;</a
           >
         </div>
         <br />
