nye sejere fonte

--- a/index.html
+++ b/index.html
@@ -43,9 +43,18 @@
         </div>
       </section>
 
+      <section class="lilleintro">
+        <h3>
+          Få indblik i min læring på Multimediedesign - og lær mig bedre at
+          kende.
+        </h3>
+      </section>
+
       <!-- h2 overskrift -->
       <section>
-        <h2>SE MINE SITES</h2>
+        <div class="orange">
+          <h2>SE MINE SITES</h2>
+        </div>
       </section>
 
       <!-- her skal være link til mine sites -->
@@ -87,7 +96,7 @@
             <br />
             <strong><li>Kreativ</li></strong>
             <br />
-            <strong><li>Eventyrlysten</li></strong>
+            <strong><li>Nysgerrig</li></strong>
             <br />
             <br />
             <a class="btn2" href="ommig.html"
