--- a/projekter.html
+++ b/projekter.html
@@ -32,7 +32,7 @@
         });
     </script>
     <main>
-      <section><h2>1 SEMESTER</h2></section>
+      <section><h1>PROJEKTER</h1></section>
       <section>
         <h3>
           Udforsk og følg med i min læring på <br />
