tilføjer min lille aftereffect animation

--- a/index.html
+++ b/index.html
@@ -37,10 +37,22 @@
 
     <main>
       <!-- her skal min forside/hero sektion være -->
-      <section class="hero">
-        <div>
-          <h1>PORTFOLIO</h1>
-        </div>
+      <!-- <section class="forside">
+        <h1>PORTFOLIO</h1>
+      </section> -->
+      <section>
+        <script
+          src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
+          type="module"
+        ></script>
+        <dotlottie-player
+          src="https://lottie.host/9ad02c41-f96d-47b6-b4f8-68765a1418ac/J6MCK5mc5H.lottie"
+          background="transparent"
+          speed="1"
+          style="width: 1200px; height: 500px"
+          loop
+          autoplay
+        ></dotlottie-player>
       </section>
 
       <section class="lilleintro">
@@ -81,7 +93,7 @@
       <section>
         <div class="btn3">
           <a class="btn1" href="projekter.html"
-            ><strong>Se min proces &rarr;</strong></a
+            ><strong>Min proces &rarr;</strong></a
           >
         </div>
         <br />
