--- a/ommig.html
+++ b/ommig.html
@@ -108,9 +108,9 @@
       <section>
         <div class="billederække">
           <img src="img/solnedgang.png" alt="billede 1" />
-          <img src="img/mange.jpg" alt="billede 2" />
+          <img src="img/humle.jpeg" alt="billede 2" />
           <img src="img/bali.jpg" alt="billede 3" />
-          <img src="img/blomst.png" alt="billede 4" />
+          <img src="img/plantorama.png" alt="billede 4" />
         </div>
       </section>
 
